--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,14 @@
-.App {
-  text-align: center;
+.container {
+  margin-top: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.purchase-card {
+  width: 650px;
+  box-shadow: 0 1px 8px 0 rgba(150, 255, 0, 2), 0 6px 20px 0 rgba(0, 0, 0, 20);
+  padding: 1em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.purchase-card > .show-grid {
+  padding: 10px;
+  font-size: 18px;
 }
